; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_a_md5encrypt.c_MD5authdecrypt.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_a_md5encrypt.c_MD5authdecrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32* }
%struct.TYPE_7__ = type { i64, i32* }

@EVP_MAX_MD_SIZE = common dso_local global i32 0, align 4
@MAX_MDG_LEN = common dso_local global i64 0, align 8
@KEY_MAC_LEN = common dso_local global i64 0, align 8
@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"MAC decrypt: MAC length error\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MD5authdecrypt(i32 %0, i32* %1, i64 %2, i32* %3, i64 %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca %struct.TYPE_6__, align 8
  %17 = alloca %struct.TYPE_7__, align 8
  %18 = alloca %struct.TYPE_7__, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32* %1, i32** %9, align 8
  store i64 %2, i64* %10, align 8
  store i32* %3, i32** %11, align 8
  store i64 %4, i64* %12, align 8
  store i64 %5, i64* %13, align 8
  %21 = load i32, i32* @EVP_MAX_MD_SIZE, align 4
  %22 = zext i32 %21 to i64
  %23 = call i8* @llvm.stacksave()
  store i8* %23, i8** %14, align 8
  %24 = alloca i32, i64 %22, align 16
  store i64 %22, i64* %15, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %26 = ptrtoint i32* %24 to i32
  store i32 %26, i32* %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 1
  %28 = mul nuw i64 4, %22
  %29 = inttoptr i64 %28 to i32*
  store i32* %29, i32** %27, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 0
  %31 = load i32*, i32** %9, align 8
  %32 = ptrtoint i32* %31 to i64
  store i64 %32, i64* %30, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 1
  %34 = load i64, i64* %10, align 8
  %35 = inttoptr i64 %34 to i32*
  store i32* %35, i32** %33, align 8
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %37 = load i32*, i32** %11, align 8
  %38 = ptrtoint i32* %37 to i64
  store i64 %38, i64* %36, align 8
  %39 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 1
  %40 = load i64, i64* %12, align 8
  %41 = inttoptr i64 %40 to i32*
  store i32* %41, i32** %39, align 8
  store i64 0, i64* %19, align 8
  %42 = load i32, i32* %8, align 4
  %43 = call i64 @make_mac(%struct.TYPE_6__* %16, i32 %42, %struct.TYPE_7__* %17, %struct.TYPE_7__* %18)
  store i64 %43, i64* %19, align 8
  %44 = load i64, i64* %19, align 8
  %45 = load i64, i64* @MAX_MDG_LEN, align 8
  %46 = icmp ugt i64 %44, %45
  br i1 %46, label %47, label %49

47:                                               ; preds = %6
  %48 = load i64, i64* @MAX_MDG_LEN, align 8
  store i64 %48, i64* %19, align 8
  br label %49

49:                                               ; preds = %47, %6
  %50 = load i64, i64* %13, align 8
  %51 = load i64, i64* %19, align 8
  %52 = load i64, i64* @KEY_MAC_LEN, align 8
  %53 = add i64 %51, %52
  %54 = icmp ne i64 %50, %53
  br i1 %54, label %55, label %58

55:                                               ; preds = %49
  %56 = load i32, i32* @LOG_ERR, align 4
  %57 = call i32 @msyslog(i32 %56, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %7, align 4
  store i32 1, i32* %20, align 4
  br label %69

58:                                               ; preds = %49
  %59 = load i32*, i32** %11, align 8
  %60 = load i64, i64* %12, align 8
  %61 = getelementptr inbounds i32, i32* %59, i64 %60
  %62 = load i64, i64* @KEY_MAC_LEN, align 8
  %63 = getelementptr inbounds i32, i32* %61, i64 %62
  %64 = load i64, i64* %19, align 8
  %65 = call i32 @isc_tsmemcmp(i32* %24, i32* %63, i64 %64)
  %66 = icmp ne i32 %65, 0
  %67 = xor i1 %66, true
  %68 = zext i1 %67 to i32
  store i32 %68, i32* %7, align 4
  store i32 1, i32* %20, align 4
  br label %69

69:                                               ; preds = %58, %55
  %70 = load i8*, i8** %14, align 8
  call void @llvm.stackrestore(i8* %70)
  %71 = load i32, i32* %7, align 4
  ret i32 %71
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @make_mac(%struct.TYPE_6__*, i32, %struct.TYPE_7__*, %struct.TYPE_7__*) #2

declare dso_local i32 @msyslog(i32, i8*) #2

declare dso_local i32 @isc_tsmemcmp(i32*, i32*, i64) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
